# rari

./: .clippy.toml  .gitignore  .oxlintrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  eslint.config.js  eslint.config.ts  justfile  knip.json  knip.jsonc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  railpack.json  railway.toml  rust-toolchain.toml  rustfmt.toml  socket.yml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/rari/: Cargo.toml  build.rs
crates/rari-error/: Cargo.toml
crates/rari-error/src/: lib.rs
crates/rari-use-cache/: Cargo.toml  package.json
crates/rari-use-cache/src/: closure.rs  directive.rs  hoist.rs  id.rs  lib.rs  transform.rs
crates/rari/benches/: hot_paths.rs  rari_benchmarks.rs
crates/rari/src/: lib.rs  main.rs  rsc.rs
crates/rari/src/error/: mod.rs
crates/rari/src/rendering/: mod.rs  static.rs  types.d.ts
crates/rari/src/rendering/base/: constants.rs  loader.rs  mod.rs  renderer.rs  renderer_lock.rs  sanitizer.rs  types.rs  utils.rs
crates/rari/src/rendering/core/: constants.rs  loader.rs  mod.rs  renderer.rs
crates/rari/src/rendering/html/: mod.rs
crates/rari/src/rendering/layout/: core.rs  error_messages.rs  mod.rs  route_composer.rs  types.rs  utils.rs
crates/rari/src/rendering/streaming/: mod.rs  renderer.rs  stream.rs  types.rs  validation.rs
crates/rari/src/rsc/: actions.rs  component.rs  dependency_utils.rs  elements.rs  js_loader.rs  jsx_transform.rs  layout_renderer.rs  mod.rs  performance.rs  renderer.rs  renderer_pool.rs  rsc_html_renderer.rs  rsc_tree.rs  rsc_wire_parser.rs  serializer.rs  ssr_metrics.rs  ssr_renderer.rs  streaming.rs  streaming_v2.rs  suspense.rs
crates/rari/src/rsc/actions/: mod.rs  tests.rs
crates/rari/src/rsc/components/: mod.rs
crates/rari/src/rsc/flight/: escape.rs  parser.rs
crates/rari/src/rsc/js/: component_render.js  direct_html_render.js  loader.rs  optimized_render.js  route_renderer.js
crates/rari/src/rsc/layout_renderer/: constants.rs  core.rs  mod.rs  tests.rs  types.rs
crates/rari/src/rsc/parser/: mod.rs  rsc_wire_parser.rs
crates/rari/src/rsc/renderer/: constants.rs  core.rs  mod.rs  tests.rs  types.rs
crates/rari/src/rsc/rendering/: mod.rs  sanitizer.rs
crates/rari/src/rsc/rsc_html_renderer/: mod.rs
crates/rari/src/rsc/serializer/: mod.rs  tests.rs
crates/rari/src/rsc/streaming/: mod.rs  renderer.rs  stream.rs  tests.rs  types.rs  validation.rs
crates/rari/src/rsc/suspense/: mod.rs
crates/rari/src/rsc/types/: elements.rs  mod.rs  rsc_types.rs  tree.rs
crates/rari/src/rsc/utils/: dependencies.rs  dependency_utils.rs  mod.rs
crates/rari/src/rsc/wire_format/: escape.rs  fast_json.rs  mod.rs  parser.rs
crates/rari/src/runtime/: api_bridge.rs  dist_path_resolver.rs  metadata.rs  mod.rs  module_loader.rs  module_reload.rs  ops.rs  runtime_factory.rs  transpile.rs
crates/rari/src/runtime/bridge/: http.rs  mod.rs
crates/rari/src/runtime/ext/: deno-extensions.d.ts  extension-module-types.d.ts  mod.rs  types.d.ts
crates/rari/src/runtime/factory/: component_ops.rs  constants.rs  create_params.rs  deno_runtime.rs  executor.rs  interface.rs  lazy_runtime.rs  mod.rs  runtime.rs  runtime_builder.rs  v8_utils.rs
crates/rari/src/runtime/http_adapter/: adapter.rs  mod.rs
crates/rari/src/runtime/js/: api_handler.js  component_loader_helper.js  metadata_collector.js  metadata_collector_helper.js
crates/rari/src/runtime/module/: mod.rs
crates/rari/src/runtime/module_loader/: cache.rs  config.rs  core.rs  interner.rs  loader_stubs.rs  mod.rs  node_stubs.rs  rari_stubs.rs  react_stubs.rs  react_vendor.rs  resolver.rs  storage.rs  transpiler.rs
crates/rari/src/runtime/module_reload/: config.rs  debounce.rs  manager.rs  mod.rs  stats.rs  verification.rs
crates/rari/src/runtime/redb_cache/: mod.rs
crates/rari/src/server/: actions.rs  api_routes.rs  app_router.rs  component_loader.rs  config.rs  core.rs  error_response.rs  html_diagnostics.rs  loader.rs  mod.rs  request_context.rs  request_middleware.rs  request_type.rs  response_cache.rs  static_assets.rs  vite.rs  vite_proxy.rs
crates/rari/src/server_fn/: executor.rs  js_fn.rs  mod.rs  registry.rs
crates/rari/src/ssr/: direct_html_renderer.rs  mod.rs  renderer.rs
crates/rari/src/utils/: cast.rs  mod.rs  path_url.rs
crates/rari_core/: Cargo.toml
crates/rari_core/src/: action_state.rs  component.rs  component_registry.rs  config.rs  lib.rs  request_context.rs  sanitize.rs  state.rs  static_assets.rs  vite.rs
crates/rari_core/src/cache/: handler.rs  mod.rs  response.rs
crates/rari_core/src/image/: cache.rs  config.rs  mod.rs  types.rs
crates/rari_core/src/middleware/: mod.rs  request.rs
crates/rari_core/src/og/: cache.rs  mod.rs  types.rs
crates/rari_core/src/rendering/: mod.rs  streaming_response.rs  utils.rs
crates/rari_core/src/routing/: api_error.rs  mod.rs  types.rs
crates/rari_core/src/runtime/: mod.rs  ops.rs
crates/rari_core/src/utils/: cast.rs  float.rs  mod.rs  path_validation.rs
crates/rari_rsc/: Cargo.toml
crates/rari_rsc/src/: lib.rs  types.rs
crates/rari_rsc/src/flight/: escape.rs  parser.rs  serializer.rs
crates/rari_use_cache/: Cargo.toml  package.json
crates/rari_use_cache/benches/: transform.rs
crates/rari_use_cache/src/: closure.rs  directive.rs  hoist.rs  lib.rs  transform.rs
crates/rari_utils/: Cargo.toml
crates/rari_utils/src/: lib.rs
crates/use-cache-transform/: Cargo.toml
crates/use-cache-transform/src/: closure.rs  directive.rs  hoist.rs  id.rs
tools/prepare-binaries/: Cargo.toml
tools/prepare-binaries/src/: build.rs  common.rs  main.rs  rari_binary.rs  state.rs  target.rs  use_cache_addon.rs
tools/prepare-binaries/src/ui/: mod.rs
tools/prepare_binaries/: Cargo.toml
tools/prepare_binaries/src/: main.rs  rari_binary.rs
tools/release/: Cargo.toml
tools/release/src/: app.rs  changelog.rs  files.rs  git.rs  main.rs  npm.rs  package.rs
tools/release/src/ui/: mod.rs
tools/release/templates/: package.json.platform
tools/snapshot/: Cargo.toml
tools/snapshot/src/: main.rs
(+949 files in other folders)
