[workspace]
members = [
  "crates/rari",
  "crates/rari-error",
  "crates/rari-use-cache",
  "crates/rari-utils",
  "tools/prepare-binaries",
  "tools/release",
  "tools/snapshot",
]
resolver = "2"

[workspace.package]
authors = [ "Ryan Skinner" ]
edition = "2024"
license = "MIT"
repository = "https://github.com/rari-build/rari"

[workspace.lints.clippy]
# Restriction rules for better code quality
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# Pedantic rules
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides - allow rules that are too noisy or not valuable
case_sensitive_file_extension_comparisons = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
inconsistent_struct_constructor = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
new_without_default = "allow"
similar_names = "allow"
single_match = "allow"
single_match_else = "allow"

# Nursery rules that are useful
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive" ] }
colored = "3.1.1"
cow-utils = "0.1.3"
deno_ast = { version = "=0.53.2", features = [
  "transpiling",
  "codegen",
  "visit",
  "transforms",
] }
deno_core = "0.404.0"
deno_error = "=0.7.1"
hex = "0.4.3"
rari-error = { path = "crates/rari-error" }
rari-utils = { path = "crates/rari-utils" }
regex = "1.12.4"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "full",
  "process"
] }
url = "2.5.8"

[profile.dev]
# Minimal debug info to speed up local and CI builds
debug = "line-tables-only"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.test]
# Minimal debug info to speed up test builds
debug = "line-tables-only"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"
