[workspace]
members = [
  "crates/*",
  "tools/prepare-binaries",
  "tools/release",
  "tools/snapshot",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = [ "Ryan Skinner" ]
license = "MIT"
description = "rari: Runtime Accelerated Rendering Infrastructure - A high-performance React Server Components framework powered by Rust"
homepage = "https://github.com/rari-build/rari"
repository = "https://github.com/rari-build/rari"
documentation = "https://github.com/rari-build/rari/tree/main/web"
readme = "README.md"
keywords = [
  "react",
  "server-components",
  "rsc",
  "ssr",
  "framework"
]
categories = [
  "web-programming",
  "web-programming::http-server"
]

[workspace.lints.clippy]
# Restriction rules for better code quality
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# Enforce proper error handling with anyhow/thiserror
# Prefer: ? operator > pattern matching > unwrap_or/ok_or > expect (only for proven invariants)
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Avoid unnecessary allocations
format_collect = "warn"
string_add = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"

# Force non-exhaustive on public types
exhaustive_structs = "warn"
exhaustive_enums = "warn"
missing_errors_doc = "warn"

# Pedantic rules
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides
case_sensitive_file_extension_comparisons = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
inconsistent_struct_constructor = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
new_without_default = "allow"
similar_names = "allow"
single_match = "allow"
single_match_else = "allow"

# Nursery rules that are useful
absolute_paths = "warn"
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = [ "derive" ] }
colored = "3.1.1"
cow-utils = "0.1.3"
deno_ast = { version = "=0.53.2", features = [
  "transpiling",
  "codegen",
  "visit",
  "transforms",
] }
deno_core = "0.406.0"
deno_error = "=0.7.1"
deno_node = "0.191.0"
hex = "0.4.3"
parking_lot = "0.12.5"
rari = { path = "crates/rari" }
rari-error = { path = "crates/rari-error" }
rari-rsc = { path = "crates/rari-rsc" }
rari-utils = { path = "crates/rari-utils" }
regex = "1.12.4"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
sha2 = "0.11.0"
smallvec = "1.15.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "full",
  "process"
] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.4", features = [ "v4" ] }

[profile.dev]
# Minimal debug info to speed up local and CI builds
debug = "line-tables-only"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.test]
# Minimal debug info to speed up test builds
debug = "line-tables-only"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"
