[workspace]
members = [
  "crates/*",
  "tools/*",
]
exclude = [ "tools/bundle-react-esm" ]
resolver = "2"

[workspace.package]
edition = "2024"
authors = [ "Ryan Skinner" ]
license = "MIT"
description = "rari: Runtime Accelerated Rendering Infrastructure - A high-performance React Server Components framework powered by Rust"
homepage = "https://github.com/rari-build/rari"
repository = "https://github.com/rari-build/rari"
documentation = "https://github.com/rari-build/rari/tree/main/web"
readme = "README.md"
keywords = [
  "react",
  "server-components",
  "rsc",
  "ssr",
  "framework"
]
categories = [
  "web-programming",
  "web-programming::http-server"
]

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = [ "derive" ] }
colored = "3.1.1"
cow-utils = "0.1.3"
hex = "0.4.3"
parking_lot = "0.12.5"
rari = { path = "crates/rari" }
rari_error = { path = "crates/rari_error" }
regex = "1.13.0"
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
sha2 = "0.11.0"
smallvec = "1.15.2"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.4", features = [ "v4" ] }

# Deno ecosystem — exact pins; bump as a coordinated set with Deno releases
deno_ast = "=0.53.2"
deno_bundle_runtime = "=0.41.0"
deno_cache = "=0.187.0"
deno_core = "=0.407.0"
deno_cron = "=0.134.0"
deno_crypto = "=0.268.0"
deno_error = "=0.7.1"
deno_features = "=0.51.0"
deno_ffi = "=0.241.0"
deno_fetch = "=0.278.0"
deno_fs = "=0.164.0"
deno_http = "=0.252.0"
deno_io = "=0.164.0"
deno_kv = "=0.162.0"
deno_napi = "=0.185.0"
deno_net = "=0.246.0"
deno_node = "=0.192.0"
deno_node_crypto = "=0.24.0"
deno_node_sqlite = "=0.24.0"
deno_package_json = { version = "=0.56.0", default-features = false }
deno_permissions = "=0.113.0"
deno_process = "=0.69.0"
deno_resolver = "=0.85.0"
deno_runtime = "=0.262.0"
deno_semver = "=0.10.1"
deno_telemetry = "=0.76.0"
deno_tls = "=0.241.0"
deno_web = "=0.285.0"
deno_webgpu = "=0.221.0"
deno_webidl = "=0.254.0"
deno_webstorage = "=0.249.0"
deno_websocket = "=0.259.0"
node_resolver = "=0.92.0"
sys_traits = "=0.1.28"

# Deno-aligned third-party pins — bump with Deno releases, not via cargo update alone
nix = "=0.30.1"
rustls = { version = "=0.23.40", default-features = false }
rustyline = "=17.0.0"
windows-sys = "=0.59.0"

[workspace.lints.clippy]
# Restriction rules for better code quality
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# Enforce proper error handling with anyhow/thiserror
# Prefer: ? operator > pattern matching > unwrap_or/ok_or > expect (only for proven invariants)
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Avoid unnecessary allocations
format_collect = "warn"
string_add = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"

# Force non-exhaustive on public types
exhaustive_structs = "warn"
exhaustive_enums = "warn"
missing_errors_doc = "warn"

# Pedantic rules
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides
case_sensitive_file_extension_comparisons = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
inconsistent_struct_constructor = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
new_without_default = "allow"
similar_names = "allow"
single_match = "allow"
single_match_else = "allow"
use_self = "warn"

# Nursery rules that are useful
absolute_paths = "warn"
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

[workspace.lints.rust]
linker_messages = "allow"

[profile.dev]
# Minimal debug info to speed up local and CI builds
debug = "line-tables-only"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.test]
# Minimal debug info to speed up test builds
debug = "line-tables-only"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"
