[package]
name = "rari-use-cache"
edition = { workspace = true }
license = { workspace = true }
description = "napi-rs native addon for 'use cache' directive transformation using SWC"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
napi = { version = "3.9.3", features = [
  "napi6",
  "serde-json",
] }
napi-derive = "3.5.6"
deno_ast = { workspace = true }
sha1 = "0.11.0"
hex = { workspace = true }
rustc-hash = { workspace = true }

[build-dependencies]
napi-build = "2.3.2"
