[package]
name = "rari-use-cache"
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
napi = { version = "3.9.3", features = [
  "napi6",
  "serde-json",
] }
napi-derive = "3.5.6"
deno_ast = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rustc-hash = { workspace = true }

[build-dependencies]
napi-build = "2.3.2"
