[package]
name = "rari"
version = "0.14.12"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = [ "rlib" ]

[dependencies]
# === Core Runtime Dependencies ===
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_features = { workspace = true }
deno_bundle_runtime = { workspace = true }
deno_runtime = { workspace = true }
deno_permissions = { workspace = true }
deno_process = { workspace = true }

# === Essential Web APIs ===
deno_cache = { workspace = true }
deno_crypto = { workspace = true }
deno_fetch = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_webstorage = { workspace = true }

# === Network & HTTP ===
deno_http = { workspace = true }
deno_net = { workspace = true }
deno_tls = { workspace = true }
deno_websocket = { workspace = true }

# === File System & I/O ===
deno_fs = { workspace = true }
deno_io = { workspace = true }

# === Advanced Features ===
deno_telemetry = { workspace = true }
deno_webgpu = { workspace = true }
deno_kv = { workspace = true }
deno_cron = { workspace = true }

# === Node.js Integration ===
deno_node = { workspace = true }
deno_node_crypto = { workspace = true }
deno_node_sqlite = { workspace = true }
deno_resolver = { workspace = true }
node_resolver = { workspace = true }

# === FFI & NAPI ===
deno_ffi = { workspace = true }
deno_napi = { workspace = true }

# === Error Handling ===
rari_error = { workspace = true }
thiserror = { workspace = true }

# === Async & Concurrency ===
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "fs",
  "net",
  "io-util",
  "signal",
] }
async-compression = { version = "0.4.42", features = [
  "tokio",
  "zstd",
  "brotli",
  "gzip",
] }

# === Serialization ===
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rkyv = "0.8.16"

# === HTTP Client & Server ===
http = "1.4.2"
reqwest = { version = "0.13.4", default-features = false, features = [
  "stream",
  "rustls",
  "blocking",
] }
axum = { version = "0.8.9", features = [
  "ws",
  "macros"
] }
tower = { version = "0.5.3", default-features = false, features = [ "util" ] }
tower-http = { version = "0.7.0", features = [
  "fs",
  "compression-full"
] }
colored = { workspace = true }
url = { workspace = true }
urlencoding = "2.1.3"
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"

# === Utilities ===
bytes = { version = "1.12.0", features = [ "serde" ] }
cow-utils = { workspace = true }
dashmap = "6.2.1"
parking_lot = { workspace = true }
smallvec = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
lru = "0.18.0"
uuid = { workspace = true }
redis = { version = "1.3.0", default-features = false, features = [ "tokio-comp" ] }

# === Image Processing & Layout ===
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
  "webp",
  "avif"
] }
webp = "0.3.1"

# Layout and text rendering
taffy = "0.12.1"
parley = "0.11.0"
swash = "0.2.9"
zeno = "0.3.3"
wuff = "0.2.5"
resvg = "0.47.0"

# === System Integration ===
hyper-util = { version = "0.1.20", features = [
  "tokio",
  "client-legacy"
] }
libc = "0.2.182"
nix = { workspace = true, features = [ "term" ] }
sys_traits = { workspace = true }

# === Development Tools ===
rustyline = { workspace = true }
deno_ast = { workspace = true, features = [
  "transpiling",
  "codegen",
  "visit",
  "transforms",
] }
deno_package_json = { workspace = true }
deno_semver = { workspace = true }

# === Platform-specific Dependencies ===
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_UI_Input_KeyboardAndMouse",
] }

# === CLI & Logging ===
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

# === TLS & Crypto ===
rustls = { workspace = true, features = [
  "std",
  "aws_lc_rs",
] }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
