[package]
name = "rari"
version = "0.14.12"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = [ "rlib" ]

[features]
default = []
bench = []
# Optional Deno leaf extensions
ext-full = [
  "dep:deno_webgpu",
  "dep:deno_kv",
  "dep:deno_cron",
  "dep:deno_node_sqlite",
]

[dependencies]
# === Core Runtime Dependencies ===
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_features = { workspace = true }
deno_bundle_runtime = { workspace = true }
deno_runtime = { workspace = true }
deno_permissions = { workspace = true }
deno_process = { workspace = true }

# === Essential Web APIs ===
deno_cache = { workspace = true }
deno_crypto = { workspace = true }
deno_fetch = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_webstorage = { workspace = true }

# === Network & HTTP ===
deno_http = { workspace = true }
deno_net = { workspace = true }
deno_tls = { workspace = true }
deno_websocket = { workspace = true }

# === File System & I/O ===
deno_fs = { workspace = true }
deno_io = { workspace = true }

# === Advanced Features ===
deno_telemetry = { workspace = true }
deno_webgpu = { workspace = true, optional = true }
deno_kv = { workspace = true, optional = true }
deno_cron = { workspace = true, optional = true }

# === Node.js Integration ===
deno_node = { workspace = true }
deno_node_crypto = { workspace = true }
deno_node_sqlite = { workspace = true, optional = true }
deno_resolver = { workspace = true }
node_resolver = { workspace = true }

# === FFI & NAPI ===
deno_ffi = { workspace = true }
deno_napi = { workspace = true }

# === Deno Tooling ===
deno_ast = { workspace = true, features = [
  "codegen",
  "transforms",
  "transpiling",
  "visit"
] }
deno_package_json = { workspace = true }
deno_semver = { workspace = true }

# === Async & Concurrency ===
async-compression = { version = "0.4.42", features = [
  "brotli",
  "gzip",
  "tokio",
  "zstd",
] }
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }

# === CLI & Logging ===
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

# === Error Handling ===
rari_error = { workspace = true }
thiserror = { workspace = true }

# === HTTP Client & Server ===
axum = { version = "0.8.9", features = [
  "macros",
  "ws"
] }
colored = { workspace = true }
http = "1.4.2"
reqwest = { version = "0.13.4", default-features = false, features = [
  "blocking",
  "rustls",
  "stream"
] }
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.3", default-features = false, features = [ "util" ] }
tower-http = { version = "0.7.0", features = [
  "compression-full",
  "fs"
] }
tungstenite = "0.29.0"
url = { workspace = true }
urlencoding = "2.1.3"

# === Image Processing & Layout ===
image = { version = "0.25.10", default-features = false, features = [
  "avif",
  "gif",
  "jpeg",
  "png",
  "webp"
] }
parley = "0.11.0"
resvg = "0.47.0"
swash = "0.2.9"
taffy = "0.12.1"
webp = "0.3.1"
wuff = "0.2.5"
zeno = "0.3.3"

# === Serialization ===
base64 = { workspace = true }
rkyv = "0.8.16"
serde = { workspace = true }
serde_json = { workspace = true }

# === System Integration ===
hyper-util = { version = "0.1.20", features = [
  "client-legacy",
  "tokio"
] }
libc = "0.2.182"
nix = { workspace = true, features = [ "term" ] }
rustyline = { workspace = true }
sys_traits = { workspace = true }
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_UI_Input_KeyboardAndMouse",
] }

# === TLS & Crypto ===
hex = { workspace = true }
rustls = { workspace = true, features = [
  "aws_lc_rs",
  "std"
] }
sha2 = { workspace = true }

# === Utilities ===
bytes = { version = "1.12.0", features = [ "serde" ] }
cow-utils = { workspace = true }
dashmap = "6.2.1"
lru = "0.18.0"
parking_lot = { workspace = true }
redis = { version = "1.3.0", default-features = false, features = [ "tokio-comp" ] }
redb = "4.1.0"
regex = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "hot_paths"
harness = false
required-features = [ "bench" ]
