[package]
name = "rari"
version = "0.15.4"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = [ "rlib" ]

[features]
default = []
# Optional Deno leaf extensions — delegated to rari_core
ext-full = ["rari_core/ext-full"]

[dependencies]
# === Shared core infrastructure ===
rari_core = { path = "../rari_core" }

# === Async & Concurrency ===
async-compression = { version = "0.4.42", features = [
  "brotli",
  "gzip",
  "tokio",
  "zstd",
] }
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }

# === CLI & Logging ===
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

# === Error Handling ===
rari_error = { workspace = true }
thiserror = { workspace = true }

# === HTTP Client & Server ===
axum = { version = "0.8.9", features = [
  "macros",
  "ws"
] }
colored = { workspace = true }
http = "1.4.2"
reqwest = { version = "0.13.4", default-features = false, features = [
  "blocking",
  "rustls",
  "stream"
] }
tower = { version = "0.5.3", default-features = false, features = [ "util" ] }
tower-http = { version = "0.7.0", features = [
  "compression-full",
  "fs"
] }
url = { workspace = true }
urlencoding = "2.1.3"

# === Image Processing & Layout ===
image = { version = "0.25.10", default-features = false, features = [
  "avif",
  "gif",
  "jpeg",
  "png",
  "webp"
] }
parley = "0.11.0"
resvg = "0.47.0"
swash = "0.2.9"
taffy = "0.12.1"
webp = "0.3.1"
wuff = "0.2.7"
zeno = "0.3.3"

# === Serialization ===
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# === System Integration ===
libc = "0.2.186"
nix = { workspace = true, features = [ "term" ] }
rustyline = { workspace = true }

# === TLS & Crypto ===
hex = { workspace = true }
rustls = { workspace = true, features = [
  "aws_lc_rs",
  "std"
] }
sha2 = { workspace = true }

# === Utilities ===
bytes = { version = "1.12.1", features = [ "serde" ] }
cow-utils = { workspace = true }
dashmap = "6.2.1"
parking_lot = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4.4", features = [ "iterator" ] }

[lints]
workspace = true
