[package]
name = "rari_core"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Protocol-agnostic runtime infrastructure (HTTP, V8, module loading, caching, image/OG) shared across rari backends"
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
cow-utils = { workspace = true }
url = { workspace = true }

# compression
async-compression = { version = "0.4.42", features = ["brotli", "gzip", "tokio", "zstd"] }
bytes = "1.12.1"
futures = "0.3.32"
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[lints]
workspace = true
