[package]
name = "rari_core"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Protocol-agnostic runtime infrastructure (HTTP, V8, module loading, caching, image/OG) shared across rari backends"
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
cow-utils = { workspace = true }
url = { workspace = true }
serde = { workspace = true }

# compression
async-compression = { version = "0.4.42", features = ["brotli", "gzip", "tokio", "zstd"] }
bytes = "1.12.1"
futures = "0.3.32"
tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }
tracing = { workspace = true }

# cache handlers
async-trait = "0.1.89"
dashmap = "6.2.1"
lru = "0.18.1"
parking_lot = { workspace = true }
thiserror = { workspace = true }

# http / client
axum = { version = "0.8.9", features = ["macros"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls", "stream"] }
rari_error = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rkyv = "0.8.17"

# image
deno_core = { workspace = true }
regex = { workspace = true }
http = "1.4.2"
image = { version = "0.25.10", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"] }
webp = "0.3.1"
urlencoding = "2.1.3"

[lints]
workspace = true
