[package]
name = "rari_core"
version = "0.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Protocol-agnostic runtime infrastructure (HTTP, V8, module loading, caching, image/OG) shared across rari backends"
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
default = []
# Optional Deno leaf extensions (matches rari's ext-full)
ext-full = ["dep:deno_webgpu", "dep:deno_kv", "dep:deno_cron", "dep:deno_node_sqlite"]

[dependencies]
cow-utils = { workspace = true }
url = { workspace = true }
serde = { workspace = true }

# compression
async-compression = { version = "0.4.42", features = ["brotli", "gzip", "tokio", "zstd"] }
bytes = { version = "1.12.1", features = ["serde"] }
futures = "0.3.32"
tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }
tracing = { workspace = true }

# cache handlers
async-trait = "0.1.89"
dashmap = "6.2.1"
lru = "0.18.1"
parking_lot = { workspace = true }
thiserror = { workspace = true }

# http / client
axum = { version = "0.8.9", features = ["macros", "ws"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls", "stream"] }
rari_error = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rkyv = "0.8.17"

# image
deno_core = { workspace = true }
regex = { workspace = true }
http = "1.4.2"
image = { version = "0.25.10", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"] }
webp = "0.3.1"
urlencoding = "2.1.3"

# runtime / deno stack
base64 = { workspace = true }
smallvec = { workspace = true }
deno_ast = { workspace = true, features = ["codegen", "transforms", "transpiling", "visit"] }
deno_bundle_runtime = { workspace = true }
deno_cache = { workspace = true }
deno_crypto = { workspace = true }
deno_error = { workspace = true }
deno_features = { workspace = true }
deno_fetch = { workspace = true }
deno_ffi = { workspace = true }
deno_fs = { workspace = true }
deno_http = { workspace = true }
deno_io = { workspace = true }
deno_napi = { workspace = true }
deno_net = { workspace = true }
deno_node = { workspace = true }
deno_node_crypto = { workspace = true }
deno_package_json = { workspace = true, default-features = false }
deno_permissions = { workspace = true }
deno_process = { workspace = true }
deno_resolver = { workspace = true }
deno_runtime = { workspace = true }
deno_semver = { workspace = true }
deno_telemetry = { workspace = true }
deno_tls = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_websocket = { workspace = true }
deno_webstorage = { workspace = true }
# Optional (ext-full)
deno_webgpu = { workspace = true, optional = true }
deno_kv = { workspace = true, optional = true }
deno_cron = { workspace = true, optional = true }
deno_node_sqlite = { workspace = true, optional = true }
hyper-util = { version = "0.1.20", features = ["client-legacy", "tokio"] }
tokio-tungstenite = "0.30.0"
tungstenite = "0.30.0"
libc = "0.2.186"
nix = { workspace = true, features = ["term"] }
node_resolver = { workspace = true }
redb = "4.1.0"
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp"] }
rustyline = { workspace = true }
sys_traits = { workspace = true }

[dev-dependencies]
async-stream = { version = "0.3.6" }
[lints]
workspace = true
