[package]
name = "rari_use_cache"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
deno_ast = { workspace = true }
hex = { workspace = true }
napi = { version = "3.10.0", features = [
  "napi6",
  "serde-json",
] }
napi-derive = "3.5.8"
rustc-hash = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
napi-build = "2.3.2"

[lints]
workspace = true
