[package]
name = "rari_use_cache"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deno_ast = { workspace = true, features = ["codegen", "transforms", "visit"] }
hex = { workspace = true }
napi = { version = "3.11.0", features = ["napi6", "serde-json"] }
napi-derive = "3.6.0"
rustc-hash = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
napi-build = "2.3.2"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "5.0.1" }

[[bench]]
name = "transform"
harness = false

[lints]
workspace = true
