[package]
name = "rari_utils"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
crate-type = [ "rlib" ]

[dependencies]
cow-utils = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
