[package]
name = "use-cache-transform"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "napi-rs native addon for 'use cache' directive transformation using SWC"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
napi = { version = "2", features = [
  "napi6",
  "serde-json",
] }
napi-derive = "2"
deno_ast = { workspace = true, features = [
  "codegen",
  "visit",
  "transforms",
] }
sha1 = "0.10"
hex = "0.4"
rustc-hash = { workspace = true }

[build-dependencies]
napi-build = "2"
