[package]
name = "rari-prepare-binaries"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[[bin]]
name = "prepare-binaries"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
