[package]
name = "rari-prepare-binaries"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
cow-utils = { workspace = true }
tokio = { workspace = true }
