[package]
name = "rari-prepare-binaries"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
cow-utils = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "process",
] }

[lints]
workspace = true
