[package]
name = "rari-release"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
crossterm = "0.29.0"
open = "5.3.5"
ratatui = "0.30.2"
regex = { workspace = true }
semver = "1.0.28"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1.3"
