[package]
name = "rari_release"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
crossterm = "0.29.0"
open = "5.4.0"
ratatui = "0.30.2"
regex = { workspace = true }
semver = "1.0.28"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread"] }
urlencoding = "2.1.3"

[lints]
workspace = true
