[package]
name = "rari-snapshot"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
deno_ast = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
rari = { path = "../../crates/rari" }
rustc-hash = { workspace = true }
url = { workspace = true }
