[package]
name = "rari-snapshot"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
cow-utils = { workspace = true }
deno_ast = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
rari = { workspace = true }
rustc-hash = { workspace = true }
url = { workspace = true }
