[package]
name = "rari_snapshot"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
deno_ast = { workspace = true, features = [
  "codegen",
  "transpiling"
] }
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_node = { workspace = true }
rari_core = { workspace = true, features = ["ext-full"] }
rustc-hash = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
